SDIT-1410 UserResource